# isaac-robotics

./: fixed_repos.yaml  isaac_ros.repos
src/minimal_tracked_robot/: CMakeLists.txt  package.xml
src/minimal_tracked_robot/config/: robot.rviz
src/minimal_tracked_robot/launch/: simple_robot.launch.py  simple_robot_no_rviz.launch.py  view_robot.launch.py
src/minimal_tracked_robot/urdf/: simple_robot.xacro  tracked_robot.urdf.xacro  tracked_robot_gazebo.xacro  tracked_robot_transmissions.xacro  zed_camera.xacro
src/simple_tracked_robot/: CMakeLists.txt  README.md  package.xml
src/simple_tracked_robot/config/: nav2_params.yaml  robot.rviz
src/simple_tracked_robot/launch/: start_robot.launch.py  teleop_robot.launch.py  test_controller.launch.py  tracked_robot_full.launch.py  view_robot.launch.py
src/simple_tracked_robot/scripts/: odrive_controller.py  robot_state_publisher.py  teleop_keyboard.py  test_publisher.py
src/simple_tracked_robot/urdf/: tracked_robot.urdf.xacro
src/tracked_robot/: CMakeLists.txt  DEPLOYMENT_GUIDE.md  HARDWARE_TROUBLESHOOTING.md  README.md  README_ADVANCED.md  package.xml
src/tracked_robot/config/: nav2_params.yaml  navigation.rviz  robot.rviz  slam_toolbox_params.yaml  zed2i.yaml
src/tracked_robot/docs/: ODRIVE_TROUBLESHOOTING.md  SIMULATION_SETUP.md  brake_resistor_setup.md
src/tracked_robot/launch/: advanced_robot.launch.py  basic_robot.launch.py  navigation.launch.py  tracked_robot.launch.py
src/tracked_robot/scripts/: advanced_motor_test.py  all_in_one_calibration.py  auto_docking_node.py  direct_current_control.py  direct_motor_command.py  emergency_calibration.py  emergency_control.py  encoder_diagnosis.py  final_fallback.py  force_velocity_test.py  gentle_motor_test.py  hall_sensor_calibration.py  hardware_diagnostics.py  hardware_verification.py  improved_hall_calibration.py  motor_resistance_fix.py  odrive_control_node.py  odrive_setup.py  one_shot_calibration.py  ros2_diff_drive.py  sensorless_setup.py  setup_advanced_robot.py  setup_odrive.py  specific_error_fix.py  test_my1020_motor.py  zed_camera_setup.py
src/tracked_robot/urdf/: tracked_chassis.xacro  tracked_robot.urdf.xacro  tracked_robot_gazebo.xacro  tracked_robot_properties.xacro
src/tracked_robot_msgs/: CMakeLists.txt  package.xml
src/tracked_robot_msgs/action/: Dock.action
